shaking things up

--- a/p/404.md
+++ b/p/404.md
@@ -4,7 +4,7 @@ image: /images/ancient-architecture-austria-236460.jpg
 imageMeta:
   attribution:
   attributionLink:
-featured: false
+featured: true
 author: general
 date:
 tags:
